<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mustard_yellow"
    tools:context=".ReviewAdd">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@drawable/bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/layout_bg"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_review_topic"
                android:labelFor="@+id/inputReviewTopic"/>
            <EditText
                android:id="@+id/inputReviewTopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text"/>
            <RatingBar
                android:id="@+id/reviewScoreOnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/input_review_description"
                android:labelFor="@+id/reviewDesc"
                />

            <EditText
                android:id="@+id/reviewDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancelOnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/kanit_regular"
                android:text="@string/button_cancel"
                android:layout_marginBottom="20dp"
                app:cornerRadius="22dp"
                android:backgroundTint="@color/red" />

            <Button
                android:id="@+id/btnPostReviewOnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/kanit_regular"
                android:text="@string/button_post_review"
                android:layout_marginBottom="20dp"
                app:cornerRadius="22dp" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/appHead"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/top"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="106dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo_small"
            tools:layout_editor_absoluteX="88dp" />

        <Button
            android:id="@+id/btnLogoutOnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/kanit_regular"
            android:text="@string/button_logout"
            android:textSize="16sp"
            app:cornerRadius="22dp"
            tools:layout_editor_absoluteY="0dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>